--- a/detail.html
+++ b/detail.html
@@ -34,10 +34,10 @@
         <section class="wrapper style2">
             <div class="inner">
                 <a href="detail.html">
-                    <h2>Simmba</h2>
+                    <h2 class="sasa">Simmba</h2>
                 </a>
                 <div class="row">
-                    <div class="col">
+                    <div class="col sa">
                         <img src="images/simmba.jpg" alt="img" width="230" height="350">
                     </div>
                     <div class="col w1">
@@ -62,11 +62,11 @@
                     </div>
                     <div class="col ww1">
                         <br>
-                        <h5>28 Dec 2018</h5><br>
+                        <h5 class="s">28 Dec 2018</h5><br>
                         <h5><span>&#8377;</span> 140.00 Cr</h5><br>
                         <h5> 4000</h5><br>
                         <h5> 1.91 Cr</h5><br>
-                        <h5> All Time Blockbuster </h5>
+                        <h5 class=""> All Time Blockbuster </h5>
                     </div>
                     <div class="col vl"></div>
                     <div class="col">
@@ -434,94 +434,88 @@
                                 <h6 class="s2" style="margin-top: 20px;"><span>&#8377;</span> 243.96 Cr</h6>
                                 <h6 class="s2" style="margin-top: 23px;"><span>&#8377;</span> 391.65 Cr</h6>
                             </div>
-                        </div>
+                        </div><br><hr>
                     </div>
                     <div class="col vl1"></div>
                     <div class="col">
                         <h3>Cast And Crew Credits:</h3>
                         <hr>
-                        <div class="row">
-                            <div class="col">
-                                <h4><a>Actors:</a></h4>
-                                <a href="filmography.html" data-tab="tab-1" class="active">
-                                    <h5 class=" s1 hvr so">&emsp;Ranveer Singh&emsp;</h5>
-                                </a>
-                                <a href="filmography.html" data-tab="tab-2">
-                                    <h5 class="s1 hvr so">&emsp;Sara Ali Khan&emsp;</h5>
-                                </a>
-                                <a href="filmography.html" data-tab="tab-3">
-                                    <h5 class="s1 hvr so">&emsp;Ashutosh Rana&emsp;</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1 hvr so">&emsp;Sonu Sood&emsp;</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1 hvr so">&emsp;Siddharth Jadhav&emsp;</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;Ashok Smarth</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;Ganesh Yadav</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;Uday Tikekar</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                                <a href="filmography.html">
-                                    <h5 class="s1">&emsp;etc</h5>
-                                </a>
-                            </div>
-                            <div class="col vl2"></div>
-                            <div class="col">
-                                <table>
-                                    <tr></a>
-                                        <td><h5><a>Director</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Rohit Shetty , Kumar Sanu , Rohit Shetty</h6></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><h5><a>Producer</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Karan Johar , Rohit Shetty </h6></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><h5><a>Banner</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Dharma Production ,  Reliance Entertainment</h6></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><h5><a>Story Writer</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Rohit Shetty</h6></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><h5><a>Screenwriter</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Yunus Sajawal</h6></a></td>
-                                    </tr>
-                                    <tr><td><h5><a>Dialogist</a></h5></td>
-                                    <td><a href="filmography.html"><h6>Sajid-Farhad</h6></a></td></tr>
-                                    <tr>
-                                        <td><h5><a>Musician</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Dj Chetas , Tanishk</h6></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td><h5><a>Lyricist</a></h5></td>
-                                        <td><a href="filmography.html"><h6>Rashmi Singh</h6></a></td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
+
+                        <table>
+                            <tr>
+                                <td>
+                                <h5><a>Actor:</a></h5></td>
+                                <td>
+                                <a href="filmography.html"><h6>Ranveer Singh | Sara Ali Khan | Ashutosh Rana | Sonu Sood | Siddharth Jadhav | Ashok Smrth<div>Ganesh Yadav | Uday Tikekar</div></h6></a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Director:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Rohit Shetty , Kumar Sanu , Rohit Shetty</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Producer:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Karan Johar , Rohit Shetty </h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Banner:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Dharma Production , Reliance Entertainment</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Story Writer:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Rohit Shetty</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Screenwriter:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Yunus Sajawal</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Dialogist:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Sajid-Farhad</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Musician:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Dj Chetas , Tanishk</h6>
+                                    </a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5><a>Lyricist:</a></h5>
+                                </td>
+                                <td><a href="filmography.html">
+                                        <h6>Rashmi Singh</h6>
+                                    </a></td>
+                            </tr>
+                        </table>
+
+
                     </div>
                 </div>
                 <hr>
