--- a/detail.html
+++ b/detail.html
@@ -84,7 +84,6 @@
                                 <h5 class="s1"><a href="Domestic Box Office Collection/dom_open_weekend.html">Opening
                                         Weekend Nett: </a></h5>
 
-
                                 <h5 class="s1"><a href="Domestic Box Office Collection/dom_open_week.html">Opening Week
                                         Nett: </a></h5>
 
@@ -454,7 +453,7 @@
                                     <h5><a>Director:</a></h5>
                                 </td>
                                 <td><a href="filmography.html">
-                                        <h6>Rohit Shetty , Kumar Sanu , Rohit Shetty</h6>
+                                        <h6>Rohit Shetty | Kumar Sanu | Rohit Shetty</h6>
                                     </a></td>
                             </tr>
                             <tr>
@@ -462,7 +461,7 @@
                                     <h5><a>Producer:</a></h5>
                                 </td>
                                 <td><a href="filmography.html">
-                                        <h6>Karan Johar , Rohit Shetty </h6>
+                                        <h6>Karan Johar | Rohit Shetty </h6>
                                     </a></td>
                             </tr>
                             <tr>
@@ -470,7 +469,7 @@
                                     <h5><a>Banner:</a></h5>
                                 </td>
                                 <td><a href="filmography.html">
-                                        <h6>Dharma Production , Reliance Entertainment</h6>
+                                        <h6>Dharma Production | Reliance Entertainment</h6>
                                     </a></td>
                             </tr>
                             <tr>
@@ -502,7 +501,7 @@
                                     <h5><a>Musician:</a></h5>
                                 </td>
                                 <td><a href="filmography.html">
-                                        <h6>Dj Chetas , Tanishk</h6>
+                                        <h6>Dj Chetas | Tanishk</h6>
                                     </a></td>
                             </tr>
                             <tr>
