--- a/detail.html
+++ b/detail.html
@@ -105,13 +105,13 @@
                                     <!-- Modal content -->
                                     <div class="modal-content">
                                         <span class="close1">&times;</span>
-                                        <h3>Highest Week-Wise Nett Collections:</h3>
+                                        <h3 class="wsw">Highest Week-Wise Nett Collections:</h3>
                                         <hr>
                                         <div class="row">
                                             <div class="col">
                                                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                             </div>
-                                            <div class="col">
+                                            <div class="col gyb1">
                                                 <h4><a href="Domestic Box Office Collection/dom_week.html">• Opening
                                                         Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Second
@@ -136,7 +136,7 @@
                                                         After:</a>
                                                 </h4>
                                             </div>
-                                            <div class="col">
+                                            <div class="col gyb1">
                                                 <h5 style="margin-top: 7px;">
                                                     <span>&#8377;</span> 89.33 Cr<br>
                                                     <div class="sq"><span>&#8377;
@@ -154,7 +154,7 @@
                                                         L</span></div><br>
                                                 </h5>
                                             </div>
-                                            <div class="col-6" style="margin-left: 190px;">
+                                            <div class="col-6 gyb1" style="margin-left: 190px;">
                                                 <h4 class="sd"><a href="Domestic Box Office Collection/dom_week.html">•
                                                         Sixth
                                                         Week:</a><br><a
@@ -165,7 +165,7 @@
                                                         href="Domestic Box Office Collection/dom_week.html">• There
                                                         After:</a></h4>
                                             </div>
-                                            <div class="col" style="margin-top: 7px;">
+                                            <div class="col gyb1" style="margin-top: 7px;">
                                                 <h5 class="sd">
                                                     <span>&#8377; 9.63 L</span><br>
                                                     <div class="st"><span>&#8377; 1.91
@@ -176,6 +176,44 @@
                                                             L</span></div>
                                                 </h5>
                                             </div>
+                                            <table class="gyb">
+                                                <tr>
+                                                    <td>• Opening Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 Cr</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Second Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 Cr</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Third Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 Cr</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Fourth Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 Cr</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Fifth Week: </td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 Cr</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Sixth Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 L</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Seventh Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 L</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• Eighth Week:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 L</b></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>• There After:</td>
+                                                    <td class="sws"><b><span>&#8377;</span> 89.33 L</b></td>
+                                                </tr>
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -256,15 +294,15 @@
                                             </div>
                                             <div class="col-6" style="margin-left: 190px;">
                                                 <h4 class="sd"><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Bihar:</a>
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Bihar:</a>
                                                     <br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Nizam-Andhra:</a>
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Nizam-Andhra:</a>
                                                     <br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Mysore:
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Mysore:
                                                     </a><br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Odisha:</a><br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Assam:</a><br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Tamil
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Odisha:</a><br><a
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Assam:</a><br><a
+                                                        href="Domestic Box Office Collection/dom_circuit.html">• Tamil
                                                         N-Kerala:</a>
                                                 </h4>
                                             </div>
@@ -441,9 +479,9 @@
                     <div class="col vl1 gyb1"></div>
                     <div class="col">
                         <h3>Cast And Crew Credits:</h3>
-                        <hr>
+                        
 
-                        <table>
+                        <table class="tbl">
                             <tr>
                                 <td>
                                     <h5><a>Actor:</a></h5>
