--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="340" height="470"></a>
+								<a href="article.html"><img src="images/bahubali2.jpg" width="340" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="340" height="470"></a>
+								<a href="article.html"><img src="images/bharat.jpg" width="340" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="340" height="470"></a>
+								<a href="article.html"><img src="images/bajrangi.jpg" width="340" height="470"></a>
 							</div>
 	
 							<!-- Next and previous buttons -->
