--- a/detail.html
+++ b/detail.html
@@ -276,7 +276,7 @@
                                             <div class="col">
                                                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                             </div>
-                                            <div class="col-6 ">
+                                            <div class="col-6 gyb1">
                                                 <h4><a href="Domestic Box Office Collection/dom_circuit.html">•
                                                         Mumbai-Gujarat:</a><br><a
                                                         href="Domestic Box Office Collection/dom_circuit.html">•
@@ -295,7 +295,7 @@
 
                                                 </h4>
                                             </div>
-                                            <div class="col " style="margin-top: 10px;">
+                                            <div class="col gyb1" style="margin-top: 10px;">
                                                 <h5>
                                                     <span>&#8377;</span> 89.33 Cr</a><br>
                                                     <div class="dq"><span>&#8377;</span>
