--- a/filmography.html
+++ b/filmography.html
@@ -62,6 +62,7 @@
 						</div>
 						<div class="col vl9 gyb1"></div>
 						<div class="col">
+							<br class="gyb"><br class="gyb">
 							<h3>Film Stats:</h3>
 							<hr>
 							<a href="calender.html">
@@ -231,13 +232,10 @@
 								</h4>
 								</UL>
 							</div>
-						</div>
-					</div>
-					<div class="col vl4 gyb1"></div>
-					<div class="col">
-						<br class="gyb"><br class="gyb">
+						</div><br>
 						<a href="worldwide.html">
-							<h3>World Wide Box Office:</h3>
+							
+							<h3>World Wide Box Office Collection:</h3>
 						</a>
 						<hr>
 						<a href="World-Wide Box Office Collection/world_weekend.html">
@@ -250,6 +248,7 @@
 							<h5 class="s1">Highest Lifetime Gross Collection</h5>
 						</a>
 					</div>
+					
 				</div><hr>
 			</div>
 	</div>
