--- a/filmography.html
+++ b/filmography.html
@@ -35,58 +35,64 @@
 			<div class="inner">
 				<div class="row">
 					<div class="col">
-						<a href="filmography.html"><h2 class="sasa">Aamir Khan:</h2></a>
+						<a href="filmography.html">
+							<h2 class="sasa">Aamir Khan</h2>
+						</a>
 					</div>
 					<div class="col w2">
 						<select class="choose">
-							<option value="movies">Actors</option>
-							<option value="movies">Directors</option>
-							<option value="movies">Producers</option>
-							<option value="movies">Banners</option>
-							<option value="movies">Writers</option>
+							<option value="movies">Actor</option>
+							<option value="movies">Director</option>
+							<option value="movies">Producer</option>
+							<option value="movies">Banner</option>
+							<option value="movies">Writer</option>
 							<option value="movies">Screenplay</option>
-							<option value="movies">Dialogists</option>
-							<option value="movies">Musicians</option>
-							<option value="movies">Lyricists</option>
+							<option value="movies">Dialogist</option>
+							<option value="movies">Musician</option>
+							<option value="movies">Lyricist</option>
 						</select>
 					</div>
-					<div class="row">
-						<div class="col sa">
-							<img src="images/aamir.jpg" alt="img" width="230" height="350">
-						</div>
-						<div class="col w1">
-							<h3>Biggest Box Office Successes:</h3>
-							<a href="detail.html"><img src="images/dangal.jpg" class="ig" alt="img" width="190" height="270"></a>
-							<a href="detail.html"><img src="images/raja.jpg" class="ig" alt="img" width="190" height="270"> </a>
-
-						</div>
-						<div class="col vl9 gyb1"></div>
-						<div class="col">
-							<br class="gyb"><br class="gyb">
-							<h3>Film Stats:</h3>
-							<hr>
-							<a href="calender.html">
-								<h5 class="s1">Release Date Calender of Movies</h5>
-							</a>
-							<a href="budget.html">
-								<h5 class="s1">Production + P & A Budget of Movies</h5>
-							</a>
-							<a href="screen.html">
-								<h5 class="s1">No. of Domestic Cinema Screens</h5>
-							</a>
-							<a href="footfalls.html">
-								<h5 class="s1">No. of Domestic Footfalls</h5>
-							</a>
-							<a href="verdict.html">
-								<h5 class="s1">Domestic Verdict of The Movies</h5>
-							</a>
-						</div>
-					</div>
 				</div>
+				<hr class="hrl">
+				<div class="row">
+					<div class="col sa">
+						<img src="images/aamir.jpg" alt="img" width="230" height="350">
+					</div>
+					<div class="col w1">
+						<br class="gyb"><br class="gyb">
+						<h3>Biggest Box Office Successes of Aamir:</h3>
+						<hr>
+						<a href="detail.html"><img src="images/dangal.jpg" class="ig" alt="img" width="180"
+								height="250"></a>
+						<a href="detail.html"><img src="images/raja.jpg" style="margin-left: 10px;" class="ig w3" alt="img"
+								width="180" height="250">
+						</a>
+
+					</div>
+					<div class="col vl9 gyb1"></div>
+					<div class="col">
+						<br class="gyb"><br class="gyb">
+						<h3>Film Stats:</h3>
+						<hr>
+						<a href="calender.html">
+							<h5 class="s1">Release Date Calendar Of Movies</h5>
+						</a>
+						<a href="budget.html">
+							<h5 class="s1">Production + P&A Budget Of Movies</h5>
+						</a>
+						<a href="screen.html">
+							<h5 class="s1">No. Of Domestic Cinema Screens</h5>
+						</a>
+						<a href="footfalls.html">
+							<h5 class="s1">No. Of Domestic Footfalls</h5>
+						</a>
+						<a href="verdict.html">
+							<h5 class="s1">Domestic Verdict Of The Movies</h5>
+						</a>
+					</div>
+				</div><br>
 				<hr>
-		</section>
-		<section class="wrapper style2">
-			<div class="inner">
+				<br><br>
 				<div class="row">
 					<div class="col">
 						<a href="domestic.html">
@@ -94,22 +100,22 @@
 						</a>
 						<hr>
 						<a href="Domestic Box Office Collection/dom_open_day.html">
-							<h5 class="s1">Highest Opening Day Nett Collection</h5>
+							<h5 class="s1">Highest Opening Day Nett Collections</h5>
 						</a>
 						<a href="Domestic Box Office Collection/dom_open_weekend.html">
-							<h5 class="s1">Highest Opening Weekend Nett Collection</h5>
+							<h5 class="s1">Highest Opening Weekend Nett Collections</h5>
 						</a>
 						<a href="Domestic Box Office Collection/dom_open_week.html">
-							<h5 class="s1">Highest Opening Week Nett Collection</h5>
+							<h5 class="s1">Highest Opening Week Nett Collections</h5>
 						</a>
 						<a href="Domestic Box Office Collection/dom_lifetime_nett.html">
-							<h5 class="s1">Highest Lifetime Nett Collection</h5>
+							<h5 class="s1">Highest Lifetime Nett Collections</h5>
 						</a>
 						<a href="Domestic Box Office Collection/dom_lifetime_gross.html">
-							<h5 class="s1">Highest Lifetime Gross Collection</h5>
+							<h5 class="s1">Highest Lifetime Gross Collections</h5>
 						</a>
 						<a href="#">
-							<h5 id="myBtn1" class="s1">Highest Week-wise Nett Collection</h5>
+							<h5 id="myBtn1" class="s1">Highest Week-Wise Nett Collections</h5>
 						</a>
 						<div id="myModal1" class="modal">
 							<!-- Modal content -->
@@ -122,23 +128,34 @@
 										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 									</div>
 									<div class="col-6">
-										<h4 ><a href="Domestic Box Office Collection/dom_week.html">• Opening
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Second
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Third
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Fourth
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Fifth
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">• Sixth
-													Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">• Seventh
-													Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">• Eighth
-													Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">• There
-													After</a>
+										<h4><a href="Domestic Box Office Collection/dom_week.html">• Opening
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Second
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Third
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Fourth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Fifth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html"
+												class="gyb">• Sixth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html"
+												class="gyb">• Seventh
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html"
+												class="gyb">• Eighth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html"
+												class="gyb">• There
+												After</a>
 										</h4>
 									</div>
 									<div class="col-6" style="margin-left: 190px;">
 										<h4 class="sd"><a href="Domestic Box Office Collection/dom_week.html">• Sixth
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Seventh
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• Eighth
-												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">• There
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Seventh
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												Eighth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•
+												There
 												After</a></h4>
 									</div>
 								</div>
@@ -158,64 +175,70 @@
 										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 									</div>
 									<div class="col-6">
-										<h4><a
-												href="Domestic Box Office Collection/dom_circuit.html">• Mumbai-Gujarat</a><br><a
+										<h4><a href="Domestic Box Office Collection/dom_circuit.html">•
+												Mumbai-Gujarat</a><br><a
 												href="Domestic Box Office Collection/dom_circuit.html">• Delhi-UP
 											</a><br><a href="Domestic Box Office Collection/dom_circuit.html">• East
-											Punjab</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html">• Rajasthan</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html">• CP Berar</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html">• Central
-												India</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html">• West Bengal</a><br>
-												<a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Bihar</a> <br><a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Nizam-Andhra</a> <br><a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Mysore
-											</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Odisha</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Assam</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">• Tamil N-Kerala</a>
+												Punjab</a><br><a
+												href="Domestic Box Office Collection/dom_circuit.html">•
+												Rajasthan</a><br><a
+												href="Domestic Box Office Collection/dom_circuit.html">• CP
+												Berar</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•
+												Central
+												India</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•
+												West Bengal</a><br>
+											<a href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•
+												Bihar</a> <br><a href="Domestic Box Office Collection/dom_circuit.html"
+												class="gyb">• Nizam-Andhra</a> <br><a
+												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•
+												Mysore
+											</a><br><a href="Domestic Box Office Collection/dom_circuit.html"
+												class="gyb">• Odisha</a><br><a
+												href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•
+												Assam</a><br><a href="Domestic Box Office Collection/dom_circuit.html"
+												class="gyb">• Tamil N-Kerala</a>
 										</h4>
 									</div>
 									<div class="col-6" style="margin-left: 190px;">
 										<h4 class="sd"><a
 												href="Domestic Box Office Collection/dom_circuit.html">•Bihar</a> <br><a
-												href="Domestic Box Office Collection/dom_circuit.html">•Nizam-Andhra</a> <br><a
-												href="Domestic Box Office Collection/dom_circuit.html">•Mysore
+												href="Domestic Box Office Collection/dom_circuit.html">•Nizam-Andhra</a>
+											<br><a href="Domestic Box Office Collection/dom_circuit.html">•Mysore
 											</a><br><a
 												href="Domestic Box Office Collection/dom_circuit.html">•Odisha</a><br><a
 												href="Domestic Box Office Collection/dom_circuit.html">•Assam</a><br><a
-												href="Domestic Box Office Collection/dom_circuit.html">•Tamil N-Kerala</a></h4>
+												href="Domestic Box Office Collection/dom_circuit.html">•Tamil
+												N-Kerala</a></h4>
 									</div>
 								</div>
 							</div><br><br>
 						</div>
 					</div>
 					<div class="col vl4 gyb1"></div>
-					<div class="col">
+					<div class="col cd">
 						<br class="gyb"><br class="gyb">
 						<a href="overseas.html">
 							<h3>Overseas Box Office Collection:</h3>
 						</a>
 						<hr>
 						<a href="Overseas Box Office Collection/over_weekend.html">
-							<h5 class="s1">Highest Opening Weekend Gross Collection</h5>
+							<h5 class="s1">Highest Opening Weekend Gross Collections</h5>
 						</a>
 						<a href="Overseas Box Office Collection/over_week.html">
-							<h5 class="s1">Highest Opening Week Gross Collection</h5>
+							<h5 class="s1">Highest Opening Week Gross Collections</h5>
 						</a>
 						<a href="Overseas Box Office Collection/over_lifetime.html">
-							<h5 class="s1">Highest Lifetime Gross Collection</h5>
+							<h5 class="s1">Highest Lifetime Gross Collections</h5>
 						</a>
 						<a href="#">
-							<h5 class="s1" id="myBtn2">Highest Circuit Wise Gross Collection</h5>
+							<h5 class="s1" id="myBtn2">Highest Circuit-Wise Gross Collections</h5>
 						</a>
 						<div id="myModal2" class="modal">
 							<!-- Modal content -->
 							<div class="modal-content">
 								<span class="close2">&times;</span>
-								<h3>Highest Circuit-Wise Gross Collections:</h3><hr>
+								<h3>Highest Circuit-Wise Gross Collections:</h3>
+								<hr>
 								<h4>
 									<a href="Overseas Box Office Collection/over_circuit.html">•
 										USA-Canada</a> <br>
@@ -232,27 +255,30 @@
 								</h4>
 								</UL>
 							</div>
-						</div><br>
+						</div>
+					</div>
+					<div class="col vl4 gyb1"></div>
+					<div class="col cd">
+						<br class="gyb"><br class="gyb">
 						<a href="worldwide.html">
-							
-							<h3>World Wide Box Office Collection:</h3>
+							<h3>WorldWide Box Office Collection:</h3>
 						</a>
 						<hr>
 						<a href="World-Wide Box Office Collection/world_weekend.html">
-							<h5 class="s1">Highest Opening Weekend Gross Collection</h5>
+							<h5 class="s1">Highest Opening Weekend Gross Collections</h5>
 						</a>
 						<a href="World-Wide Box Office Collection/world_week.html">
-							<h5 class="s1">Highest Opening Week Gross Collection</h5>
+							<h5 class="s1">Highest Opening Week Gross Collections</h5>
 						</a>
 						<a href="World-Wide Box Office Collection/world_lifetime.html">
-							<h5 class="s1">Highest Lifetime Gross Collection</h5>
+							<h5 class="s1">Highest Lifetime Gross Collections</h5>
 						</a>
 					</div>
-					
-				</div><hr>
+				</div>
+				<hr>
 			</div>
-	</div>
-	</section>
+
+		</section>
 	</div>
 	<!-- Footer -->
 	<footer id="footer">
