--- a/detail.html
+++ b/detail.html
@@ -65,7 +65,7 @@
                     <div class="col ww1 gyb1">
                         <br>
                         <h5 class="s">28 Dec 2018</h5><br>
-                        <h5><span>&#8377;</span> 140.00 Cr</h5><br>
+                        <h5 class="s9"><span>&#8377;</span> 140.00 Cr</h5><br>
                         <h5> 4000</h5><br>
                         <h5 class="sx"> 1.91 Cr</h5><br>
                         <h5 class=""> All Time Blockbuster </h5>
