--- a/about.html
+++ b/about.html
@@ -33,22 +33,22 @@
 				<section class="wrapper style2">
 					<div class="inner">
                         <h2>About Us:</h2><hr>
-                        <p class="sz"><b>Vivek Choubey:</b> Film-Stats is working towards providing you the most accurate stats about the films in India. We provide the details about:-</p>
+                        <p class="sz"><b>Vivek Choubey</b> Film-Stats is working towards providing you the most accurate stats about the films in India. <br><br> We provide the details about:-</p>
                         <h5 class="sz">~ Latest released movies in India.<br>
-                        ~ Yearly release date calendar of movies.<br>
-                        ~ Domestic (Indian) Box office collection of movies which includes:</h5>	
-                        <p class="sz">&emsp;&emsp;•Highest opening day nett collections in India. <br>&emsp;&emsp;•Highest opening weekend nett collections in India.<br>
-                        &emsp;&emsp;•Highest opening week nett collections in India.<br>&emsp;&emsp;• Highest lifetime nett collections of movies in India.<br>&emsp;&emsp;•Highest lifetime gross collections of movies in India.<br>
-                        &emsp;&emsp;•Highest week-wise nett collections of movies.<br>&emsp;&emsp;•Highest circuit-wise nett collections of Movies.</p>
-                        <h5 class="sz">~ Overseas Box office collection of movies which includes:</h5>
-                        <p class="sz">&emsp;&emsp;•Highest opening weekend gross collections.<br>&emsp;&emsp;•Highest opening week gross collections.<br>
-                        &emsp;&emsp;•Highest lifetime gross collections of movies.<br>&emsp;&emsp;•Highest circuit-wise gross collections in overseas.</p>
+                        ~ Yearly release date calendar of movies in India.<br>
+                        ~ Domestic (Indian) box office collection of movies which includes:</h5>	
+                        <p class="sz">&emsp;&emsp;• Highest opening day nett collections. <br>&emsp;&emsp;• Highest opening weekend nett collections.<br>
+                        &emsp;&emsp;• Highest opening week nett collections.<br>&emsp;&emsp;• Highest lifetime nett collections.<br>&emsp;&emsp;• Highest lifetime gross collections.<br>
+                        &emsp;&emsp;• Highest week-wise nett collections.<br>&emsp;&emsp;• Highest circuit-wise nett collections.</p>
+                        <h5 class="sz">~ Overseas (outside India) box office collection of movies which includes:</h5>
+                        <p class="sz">&emsp;&emsp;• Highest opening weekend gross collections.<br>&emsp;&emsp;• Highest opening week gross collections.<br>
+                        &emsp;&emsp;• Highest lifetime gross collections.<br>&emsp;&emsp;• Highest circuit-wise gross collections.</p>
                         <h5 class="sz">~ Worldwide Box office Collection of movies which includes:</h5>
-                        <p class="sz">&emsp;&emsp;•Highest opening weekend gross collections.<br>&emsp;&emsp;•Highest opening week gross collections.<br>&emsp;&emsp;•Highest lifetime gross collections of movies.</p>
-                        <h5 class="sz">~ Budget of the movies.<br>~ Domestic Footfalls of the movies which means the no. of patrons watched the movie in theatres.<br>
-                        ~ Domestic no. of cinema screens a movie is released on.<br>~ Verdict of the movies in India.<br>~ Movies that were released today in the past and much more...</h5>
+                        <p class="sz">&emsp;&emsp;• Highest opening weekend gross collections.<br>&emsp;&emsp;• Highest opening week gross collections.<br>&emsp;&emsp;• Highest lifetime gross collections of movies.</p>
+                        <h5 class="sz">~ Production budget + print and advertisement budget of the movies.<br>~ No. of domestic footfalls of the movies, which means the no. of patrons watched the movie in cinema halls in India.<br>
+                        ~ No. of domestic cinema screens a movie is released on in India.<br>~ Domestic verdict of the movies in India.<br>~ Movies that were released today in the past and much more...</h5>
                         <p class="sz">We are a no-nonsense website that provides you the authentic and relevant information about films without any gossips and rumours.</p>
-                        <p class="sz">This website is founded by Vivek Choubey in <b>2021</b> and you can contact us at <b>'vivek1choubey@gmail.com'.</b></p>
+                        <p class="sz">This website was founded by Mr. <b>Vivek Choubey</b> in the year <b>2021</b> and you can contact us at <b>'vivek1choubey@gmail.com'.</b></p>
     					</div>
 
                 </section>
