--- a/detail.html
+++ b/detail.html
@@ -115,9 +115,9 @@
                             </tr>
                         </table>
                     </div>
-
                     <div class="col vl gyb1"></div>
                     <div class="col">
+                        <br class="gyb">
                         <a href="domestic.html">
                             <h3>Domestic Box Office Collection:</h3>
                         </a>
@@ -258,10 +258,10 @@
 
                             </div>
                             <div class="col">
-                                <h6 class="s2 xz"><span>&#8377;</span> 1 Cr</h6>
-                                <h6 class="s2 aq"><span>&#8377;</span> 1 Cr</h6>
-                                <h6 class="s2 aq zx"><span>&#8377;</span> 1 Cr</h6>
-                                <h6 class="s2 ar"><span>&#8377;</span> 1 Cr</h6>
+                                <h6 class="s2 xz xz1"><span>&#8377;</span> 1 Cr</h6>
+                                <h6 class="s2 aq aq1"><span>&#8377;</span> 1 Cr</h6>
+                                <h6 class="s2 aq zx zx1 "><span>&#8377;</span> 1 Cr</h6>
+                                <h6 class="s2 ar ar1"><span>&#8377;</span> 1 Cr</h6>
                                 <h6 class="s2 aq"><span>&#8377;</span> 1 Cr</h6>
 
                                 <h5 id="myBtn" class="s1 as"><a href="#">Circuit-Wise Nett</a></h5>
@@ -569,8 +569,8 @@
                             </div>
                             <div class="col">
                                 <h6 class="s2 " style="margin-top: 3px;">$ 4 Mn</h6>
-                                <h6 class="s2 " style="margin-top: 22px;">$ 4 Mn</h6>
-                                <h6 class="s2" style="margin-top: 21px;">$ 4 Mn</h6>
+                                <h6 class="s2 " style="margin-top: 22.5px;">$ 4 Mn</h6>
+                                <h6 class="s2" style="margin-top: 22px;">$ 4 Mn</h6>
                             </div>
                         </div>
                         <br class="gyb1">
@@ -594,14 +594,15 @@
                             </div>
                             <div class="col">
                                 <h6 class="s2 zxc" style="margin-top: 4px;"><span>&#8377;</span> 6 Cr</h6>
-                                <h6 class="s2 xzc" style="margin-top: 20px;"><span>&#8377;</span> 6 Cr</h6>
-                                <h6 class="s2 vcv" style="margin-top: 23px;"><span>&#8377;</span> 6 Cr</h6>
+                                <h6 class="s2 xzc" style="margin-top: 21px;"><span>&#8377;</span> 6 Cr</h6>
+                                <h6 class="s2 vcv" style="margin-top: 24px;"><span>&#8377;</span> 6 Cr</h6>
                             </div>
                         </div><br>
                         <hr class="gyb1 hr12">
                     </div>
                     <div class="col vl1 gyb1"></div>
                     <div class="col">
+                        <br class="gyb">
                         <h3>Cast And Crew Credits:</h3>
 
 
