--- a/filmography.html
+++ b/filmography.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class="col w1">
 						<br class="gyb"><br class="gyb">
-						<h3>Biggest Box Office Successes of Aamir:</h3>
+						<h3>Biggest Box Office Successes:</h3>
 						<hr>
 						<a href="detail.html"><img src="images/dangal.jpg" class="ig" alt="img" width="180"
 								height="250"></a>
@@ -72,7 +72,7 @@
 					<div class="col vl9 gyb1"></div>
 					<div class="col">
 						<br class="gyb"><br class="gyb">
-						<h3>Film Stats:</h3>
+						<h3>Film-Stats:</h3>
 						<hr>
 						<a href="calender.html">
 							<h5 class="s1">Release Date Calendar Of Movies</h5>
@@ -91,8 +91,8 @@
 						</a>
 					</div>
 				</div><br>
-				<hr>
-				<br><br>
+				<hr class="gyb1">
+				<br><br class="gyb1">
 				<div class="row">
 					<div class="col">
 						<a href="domestic.html">
@@ -261,7 +261,7 @@
 					<div class="col cd">
 						<br class="gyb"><br class="gyb">
 						<a href="worldwide.html">
-							<h3>WorldWide Box Office Collection:</h3>
+							<h3>Worldwide Box Office Collection:</h3>
 						</a>
 						<hr>
 						<a href="World-Wide Box Office Collection/world_weekend.html">
