--- a/login.html
+++ b/login.html
@@ -33,26 +33,23 @@
                 <section class="wrapper style2">
                     <div class="inner">
                         <header>
-                            <h2 class="lgn ">Login :</h2><hr>
+                            <a href="login.html"><h2 class="lgn ">Log In:</h2></a><hr>
                         </header>
                         <div class="tabs">
                             <div class="row">
-                                <div class="col-6 fr">
-                                    ...............................................................................................
-                                </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 mgl">
                                     <div class="title">
-                                        <p class="title title-subs text-center fo">New user? <span><a href="signup.html" class="linktext">Create an account</a></span></p>
+                                        <p class="title title-subs text-center fo">New user? <span><a href="signup.html" class="linktext sss"><b>Create an account</b></a></span></p>
                                     </div>
                                     <form class="form">
                                         <div class="form-group fo">
-                                            <input type="email" name="email" id="email" class="input-field" placeholder="User Name">
+                                            <input type="email" name="email" id="email" class="input-field" placeholder="E-mail">
                                         </div><br>
                                         <div class="form-group fo">
                                             <input type="password" name="password" id="password" class="input-field" placeholder="Password">
                                         </div><br>
                                         <div class="form-group fo">
-                                            <input type="button" name="submit" class="input-submit" value="Login">
+                                            <input type="button" name="submit" class="input-submit btcn" value="Log In">
                                         </div>
                                     </form>
                                 </div>
