--- a/signup.html
+++ b/signup.html
@@ -32,24 +32,23 @@
                 <section class="wrapper style2">
                     <div class="inner">
                         <header>
-                            <h2 class="lgn ">Signup :</h2><hr>
+                            <a href="signup.html"><h2 class="lgn ">Register:</h2></a><hr>
                         </header>
                         <div class="tabs">
                             <div class="container">
-                                <div class="col-md-6">
+                                <div class="col">
                                     <form class="form">
-										<label for="user"><b>User Name</b></label>
-    									<input type="text" placeholder="Enter User Name" name="user" required><br>
-                                        <label for="email"><b>Email</b></label>
-    									<input type="email" placeholder="Enter Email" name="email" required><br>
-										<label for="Mobile"><b>Mobile Number</b></label>
-    									<input type="text" placeholder="Enter Mobile Number" name="mobile" required><br>
+										<label for="user"><b>Full Name</b></label>
+    									<input type="text" placeholder="Enter Full Name" name="user" required><br>
+                                        <label for="email"><b>E-mail</b></label>
+    									<input type="email" placeholder="Enter E-mail" name="email" required><br>
+										<label for="Mobile"><b>Contact Number</b></label>
+    									<input type="text" placeholder="Enter Contact Number" name="mobile" required><br>
 										<label for="pass"><b>Password</b></label>
     									<input type="password" placeholder="Enter Password" name="pass" required><br>
 										<label for="con_pass"><b>Confirm Password</b></label>
     									<input type="password" placeholder="Repeat Password" name="con_pass" required><br><br>
-										<button type="button" class="cancelbtn">Cancel</button>
-										<button type="submit" class="sbtn">Sign Up</button>
+										<button type="submit" class="sbtn btcn">Register</button>
                                     </form>
                                 </div>
                             </div>
