--- a/detail.html
+++ b/detail.html
@@ -526,8 +526,8 @@
                                                     <div class="fw">5 Mn </div><br>
                                                     <div class="fe">$5
                                                         Mn </div><br>
-                                                    <div class="fr">N/A </div><br>
-                                                    <div class="ft">N/A </div>
+                                                    <div class="fr"></div>N/A <br>
+                                                    <div class="ft"></div>N/A 
                                                 </h5>
                                             </div>
                                             <table class="gyb">
@@ -594,7 +594,7 @@
                             </div>
                             <div class="col">
                                 <h6 class="s2 zxc" style="margin-top: 4px;"><span>&#8377;</span> 6 Cr</h6>
-                                <h6 class="s2 xzc" style="margin-top: 21px;"><span>&#8377;</span> 6 Cr</h6>
+                                <h6 class="s2 xzc" style="margin-top: 22px;"><span>&#8377;</span> 6 Cr</h6>
                                 <h6 class="s2 vcv" style="margin-top: 24px;"><span>&#8377;</span> 6 Cr</h6>
                             </div>
                         </div><br>
