--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 						</ul>
 					</div>
 					<div class="col car" >
+						<br class="gyb">
 						<h2>Box Office Reports & Articles:</h2><hr>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
