--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</select>
 					</div>
 					<div class="col">
-						<button type="submit" class="bttn"><i class="fa fa-search">&nbsp;&nbsp;</i></button>
+						<a href="search_result.html"><button type="submit" class="bttn"><i class="fa fa-search">&nbsp;&nbsp;</i></button></a>
 					</div>
 				</div><br>
 				<header>
