--- a/detail.html
+++ b/detail.html
@@ -504,7 +504,7 @@
                                         <hr>
                                         <div class="row">
                                             <div class="col gyb1">
-                                                <h4>
+                                                <h4 style="margin-left: 160px;">
                                                     <a href="Overseas Box Office Collection/over_circuit.html">•
                                                         USA-Canada:</a> <br>
                                                     <a href="Overseas Box Office Collection/over_circuit.html">•
