--- a/overseas.html
+++ b/overseas.html
@@ -53,15 +53,15 @@
 							<div class="modal-content">
 								<span class="close">&times;</span> 
 								<h4>Highest Circuit-Wise Gross Collections:</h4><hr>
-								<h3>
+								<h3 style="margin-left: 160px;">
 									<a href="Overseas Box Office Collection/over_circuit.html">• USA-Canada <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• United Kingdom <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• Gulf <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• Australia <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• China <br>
 									<a href="Overseas Box Office Collection/over_circuit.html">• Others <br>
-									</h4>
-							</div>
+									</h3>
+							</div><br><br>
 						</div>
 						</ul>
                     </div>
@@ -146,3 +146,6 @@
 
 	</body>
 </html>
+
+
+
