--- a/article.html
+++ b/article.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main1.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -45,33 +45,65 @@
 		<!-- Two -->
 		<section class="wrapper style2">
 			<div class="inner">
-                <h2 class="bg">All Time Blockbusters - Aamir Khan</h2>   
-                <div class="row">
-                    <div class="col">
-                        <h5>Sunday , 02 May 2K21 , 4:30 PM IST</h5>
-                    </div>
-                </div><br>
-                <img src="images/2.0.webp" alt="img"  class="is1" width="250" height="350">&emsp;&emsp;
-                <img src="images/bahubali2.jpg" alt="img" class="is1"  width="250" height="350">&emsp;&emsp;
-                <img src="images/dhoom3.jpg" alt="img" class="gyb" width="250" height="350">&emsp;&emsp;
-                <img src="images/dangal.jpg" alt="img" class="gyb" width="250" height="350">&emsp;&emsp;
-                <br><br>
-                <p class="sz">Its not wrong to say <b>Aamir Khan</b> along with <b>Salman Khan</b> was the biggest superstar of bollywood since last decade. He is the only
-                Actor to give 3 <b>All Time Blockbuster</b> movies  last decade whereas <b>Salman</b> gave only one. It all happend because of
-            his perfectionist behaviour. So on ........................................................</p>
-                    <hr><br><br>
-                    <h3>Other Latest Box Office Reports & Articles:</h3><hr>
-                    <h4>• Master Box Office Storm</h4>
-                    <h4>• Vakeel Saab fixed Ticket Window</h4>
-                    <h4>• Why Salman made gap in Radhe</h4>
-                    <h4>• Aamir takes too much time</h4>
-                    <h4>• The failure of Kalank</h4>
-                    <h4>• Tanhaji Final Box Office Collection</h4><br><br><hr>
-        </div>
-        </section>
-    </div>
+				<h2>All Time Blockbusters - Aamir Khan</h2>
+				<hr style="margin-top: -20px;">
+				<h5>Sunday | 02 May 2021 | 4:30 PM IST</h5>
+				<br>
+				<img src="images/2.0.webp" alt="img" class="is1" width="250"
+					height="350">&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;
+				<img src="images/bahubali2.jpg" alt="img" class="is1" width="250"
+					height="350">&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;
+				<img src="images/dhoom3.jpg" alt="img" class="gyb1" width="250"
+					height="350">&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;
+				<img src="images/dangal.jpg" alt="img" class="gyb1" width="250" height="350">
+				<br><br>
+				<p class="sz">Its not wrong to say <b>Aamir Khan</b> along with <b>Salman Khan</b> was the biggest
+					superstar of bollywood since last decade. He is the only
+					Actor to give 3 <b>All Time Blockbuster</b> movies last decade whereas <b>Salman</b> gave only one.
+					It all happend because of
+					his perfectionist behaviour. So on ........................................................</p>
+				<hr><br><br>
+				<h3>Other Latest Box Office Reports & Articles:</h3>
+				<hr>
+				<h4>• Master Box Office Storm</h4>
+				<h4>• Vakeel Saab fixed Ticket Window</h4>
+				<h4>• Why Salman made gap in Radhe</h4>
+				<h4>• Aamir takes too much time</h4>
+				<h4>• The failure of Kalank</h4>
+				<h4>• Tanhaji Final Box Office Collection</h4><br><br>
+				<hr>
+				<div class="y6Uyqe">
+					<div class="EIaa9b">
+						<div class="AJLUJb"><a class="k8XOCe" href="#">
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">cakes india</div>
+							</a><a class="k8XOCe" href="#" >
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">cakes for girls</div>
+							</a><a class="k8XOCe" href="#">
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">types of cakes</div>
+							</a></div>
+						<div class="AJLUJb"><a class="k8XOCe"
+								href="#">
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">cakes shop</div>
+							</a><a class="k8XOCe"
+								href="#">
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">cakes for boys</div>
+							</a><a class="k8XOCe"
+								href="#">
+								<div class="aXBZVd"></div>
+								<div class="s75CSd yF4bGf j6iBde">cakes names</div>
+							</a></div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 
-    <footer id="footer">
+	<footer id="footer">
 		<div class="inner">
 			<div class="flex flex-3">
 				<div class="col">
@@ -102,15 +134,18 @@
 		</div>
 		<div class="copyright">
 			<ul class="icons">
-				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
+							class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
+							class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
+							class="label">Instagram</span></a></li>
 			</ul>
-			&copy; Design By: <a href="#">Tech_Marketz</a>   
+			&copy; Design By: <a href="#">Tech_Marketz</a>
 		</div>
 	</footer>
-    <script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
@@ -120,3 +155,4 @@
 </body>
 
 </html>
+
